# BMSTU-4th-semestr

./: README.md  lecture
computational_algorithms/: README.md
computational_algorithms/lab5/: CMakeLists.txt  main.cpp
computational_algorithms/lab6/: CMakeLists.txt  main.cpp
computer_graphics/: README.md
computer_graphics/lab10/: widget.cpp  widget.h  widget.ui
computer_graphics/lab4/: algs.cpp  algs.h  lab4.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
computer_graphics/lab5/: lab5.pro  widget.cpp  widget.h  widget.ui
computer_graphics/lab6/: lab6.pro  widget.cpp  widget.h  widget.ui
computer_graphics/lab7/: lab7.pro  widget.cpp  widget.h  widget.ui
computer_graphics/lab8/: lab8.pro  widget.cpp  widget.h  widget.ui
computer_graphics/lab9/: widget.cpp  widget.h  widget.ui
oop/: README.md
oop/lab1/: command.h  edge.cpp  edge.h  mainwidget.cpp  mainwidget.h  model.cpp  model.h  point.cpp  point.h  signalhandling.cpp  signalhandling.h  source.cpp  source.h
oop/lab3/: CMakeLists.txt  CabinWatcher.cpp  CabinWatcher.h  cabin.cpp  cabin.h  controlpanel.cpp  controlpanel.h  door.cpp  door.h  lab03.pro  mainwindow.cpp  mainwindow.h
oop/lab4/: base_manager.h  data.txt  umlka.mdj  viewer.pro  widget.cpp  widget.h  widget.ui
oop/lab4/commands/: add_camera_command.cpp  add_camera_command.h  move_camera_command.cpp  move_command.cpp  move_command.h  pitch_camera_command.cpp  pitch_camera_command.h  remove_camera_command.cpp  remove_camera_command.h  remove_object_command.cpp  remove_object_command.h  roll_camera_command.cpp  roll_camera_command.h  (+8 more)
(+35 files in other folders)
